[package]
name = "puffin_egui"
version = "0.27.1"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Show puffin profiler flamegraph in-game using egui"
edition = "2018"
homepage = "https://github.com/EmbarkStudios/puffin"
repository = "https://github.com/EmbarkStudios/puffin"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["development-tools::profiling", "game-development", "gui"]
keywords = ["profiler", "gamedev", "gui"]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
  "README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { git="https://github.com/bitwise-git/egui.git", rev="da4753f62cf84bed8e8bd15b541b27c4b0ed5b68", features=["puffin"] }
indexmap = { version = "2.1", features = ["serde"] }
natord = "1.0"
once_cell = "1.7"
parking_lot = "0.12"
puffin = { version = "0.19", path = "../puffin", features = ["packing"] }
serde = { version = "1.0", features = ["derive"], optional = true }
time = { version = "0.3.17", default-features = false, features = [
  "formatting",
  "macros",
] }
vec1 = "1.8"
web-time = "0.2"
